--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Node.js CI/CD
+name: CI/CD
 
 on:
   push:
@@ -30,14 +30,16 @@ jobs:
       - name: Set up SSH key
         run: |
           mkdir -p ~/.ssh
-          # Salve o SSH private key com permissão correta diretamente
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo "${{ secrets.MY_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H your.server.com >> ~/.ssh/known_hosts
+          ssh-keyscan -H your.server.com >> ~/.ssh/known_hosts  # Substitua your.server.com pelo seu servidor real
         env:
-          SSH_PRIVATE_KEY: echo "${{ secrets.MY_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          MY_SSH_PRIVATE_KEY: ${{ secrets.MY_SSH_PRIVATE_KEY }}
 
-
-      - name: Deploy (exemplo com SSH)
+      - name: Test SSH connection
         run: |
-          ssh -i ~/.ssh/id_rsa user@your.server.com 'deploy.sh'
+          ssh -i ~/.ssh/id_rsa user@your.server.com "echo 'SSH Connection successful!'"  # Verifique se a conexão SSH funciona corretamente
+
+      - name: Deploy (example with SSH)
+        run: |
+          ssh -i ~/.ssh/id_rsa user@your.server.com 'deploy.sh'  # Execute seu script de deploy no servidor
